--- a/about/about.html
+++ b/about/about.html
@@ -76,7 +76,8 @@ html {
 			<header>
 			
 				<h1><strong>TTT Project: </strong>Trans-historical Typographic Theming Tour-de-force</h1>
-				<h1>[About]</h1>
+				<br>
+				<h1>StyleMe</h1>
 			</header>
 			
 			<section class="main">
