--- a/disclaimer/disclaimer.html
+++ b/disclaimer/disclaimer.html
@@ -18,10 +18,7 @@
 			
 			<header>
 			
-				<h1><strong>TTT Project: </strong>Trans-historical Typographic Theming Tour-de-force</h1>
-				<br>
-				<h1>StyleMe</h1>
-				<h2>A journey through different styles</h2>
+				<h1><strong>StyleMe: </strong>A journey through different styles</h1>
 			</header>
 			
 			<section class="main">
