--- a/about/about.html
+++ b/about/about.html
@@ -74,10 +74,7 @@ html {
 		<div class="container">
 			
 			<header>
-			
-				<h1><strong>TTT Project: </strong>Trans-historical Typographic Theming Tour-de-force</h1>
-				<br>
-				<h1>About</h1>
+				<h1><strong>StyleMe</strong>: a journey through different styles</h1>
 			</header>
 			
 			<section class="main">
