--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -18,6 +18,8 @@
 			
 			<header>
 			<h1><strong>StyleMe: </strong><i>A journey through different styles</i>.</h1>
+			<br>
+			<h1>About</h1>
 			</header>
 			
 			<section class="main">
