--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -19,7 +19,7 @@
 			<header>
 			<h1><strong>StyleMe: </strong><i>A journey through different styles</i>.</h1>
 			<br>
-			<h1>About</h1>
+			<h1>Documentation</h1>
 			</header>
 			
 			<section class="main">
