--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Style
     <span class="caret"></span></button> 
     <ul class="dropdown-menu">
-      <li><a href="#" onclick="change_css('../../style/ancient.css')">I</a></li>
-      <li><a href="#" onclick="change_css('../../style/XIXcenturystyle.css')">II</a></li>
-      <li><a href="#" onclick="change_css('../../style/1950style.css')">III</a></li>
-      <li><a href="#" onclick="change_css('../../style/css_primo_novecento_finale.css')">First 19th Century Style</a></li>
-      <li><a href="#" onclick="change_css('../../style/css_fine_novecento_finale.css')">End Of 19th Century Style</a></li>
-      <li><a href="#" onclick ="add_script('../../style/slide.css','../../js/new.js')">VI</a></li>
+      <li><a href="#" onclick="change_css('../../style/ancient.css')">Before 1500AC</a></li>
+      <li><a href="#" onclick="change_css('../../style/XIXcenturystyle.css')">XIX Century</a></li>
+      <li><a href="#" onclick="change_css('../../style/1950style.css')">First half of the XX Century</a></li>
+      <li><a href="#" onclick="change_css('../../style/css_primo_novecento_finale.css')">Second half of the XX Century</a></li>
+      <li><a href="#" onclick="change_css('../../style/css_fine_novecento_finale.css')">Late XX Century</a></li>
+      <li><a href="#" onclick ="add_script('../../style/slide.css','../../js/new.js')">Future</a></li>
     </ul>
   </div></div>
     <div class="col-sm-5">
