--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -23,60 +23,62 @@
 			</header>
 			
 			<section class="main">
-				<h1>What is StyleMe</h1>
+				<h1>What is StyleMe?</h1>
 
-				<p>This project is aimed at creating some themes that are historically accurate and sufficiently generic to be applicable to any type of document, including more modern ones. The HTML pages loaded with the stlyes we customized will look like a document from a specific historical period. We took into consideration the supportin material of the writing, the font families, the sizes, the colors, the margins, the images and many other aspects.</p>
+				<p>This project is aimed at creating some themes that are historically accurate and sufficiently generic to be applicable to any type of document, including more modern ones. The HTML pages loaded with the stlyes we customized will look like a document from a specific historical period. We took into consideration the supporting material of the writing, the font families, the sizes, the colors, the margins, the images and many other aspects that will be examined in the following paragraphs.</p>
 				<br>
 				<p>Specifically, we took into consideration the following themes:</p>
 
 				<h2>Before 1500</h2>
-				<p>The first style we implemented concerns the graphic design related to a period when the printing process was not invented yet. Therefore, the written works of that epoque were decorated by hand by some artists. Those kind of people were called miniaturist. They had the importat task of decorating the first letters of a paragraph. They also took care of the drawings that enriched the manuscripts. As a matter of fact, after the hard work done by copyists, who copied manually huge amount of text, the miniaturists started their precise and creative work.</p>
+				<p>The first style we implemented concerns the graphic design related to a period when the printing press and the printing process itself had not been invented yet. Therefore, the written works of that epoque were decorated by hand by some artists. Those kind of people were called miniaturists. They had the importat task of decorating the first letters of a paragraph, but they also took care of the drawings that enriched the manuscripts. As a matter of fact, after the hard work done by copyists, who copied manually huge amount of text, the miniaturists started their precise and creative work.</p>
 				<br>
 				<p></p>
+				<p>Back then, decorating the empty spaces between the paragraphs or the images was something very common. Obviously, we are not talking about the well-known <i>horror vacui</i>, but the presence of images enriching the text was something very important though.</p>
+				<br>
+				<p>As regards to the supporting material of the writing, we chose to use a background that looked like the parchment paper that was used around the Middle Ages.</p>
+				<br>
+				<p>As far as the font-family is concerned, we chose one that could look like a handwritten style, with rounded letters and small decorations.</p>
+				<br>
 				<p>While creating this style, we took into consideration all these features, and we tried to mimic as much as we could a style where drawings and good-looking characters were as much important as the proper content of the text.</p>
 				<br><br>
-				<a href="images/style1.png">
-				<img src="images/style1.png" alt="chart1" class="responsive"/></a>
-
-
+				<img src="images/style1.png" alt="chart1" class="responsive"/>
 				<h2>XIX Century</h2>
-				<p>In the XIX century, the printing press was constantly developing and making progress. Back then, people considered having big titles written in different fonts as something very facy and attractive. As a matter of fact, the newspapers that date back to the XIX century are usually characterized by such features. Also, something that was very appreciated concerned elaborated decorations in the headers and lines dividing the paragraphs.</p>
+				<p>In the XIX century, the printing process was constantly developing and making progress thanks to the revolutionary invention of the printing press. As far as the newspapers were concerned, people considered having big titles written in different fonts as something very fancy and attractive. As a matter of fact, the newspapers that date back to the XIX century are usually characterized by such features. Also, something that was very appreciated concerned elaborated decorations in the headers and lines dividing the paragraphs.</p>
+				<br>
+				<p>Back then, titles had a huge importance and they used to occupy a relevant section of the page.</p>
+				<br>
 				<p>The colors in the printing had not been introduced yet, therefore all the images were and are in black-and-white.</p>
+				<br>
 				<p>By doing research, we found out something else that got our attention; in the XIX century, ads were already present in the newspapers and they used to advertize popular products that rich people, namely, those who could afford to buy newspapers, would be interested in. Therefore, we decided the add even a small ads advertizing the revolutionary drinking of the chocolate in our style.</p>
 				<br>
-				<a href="images/style2.png">
 				<img src="images/style2.png" alt="style2" class="responsive"/>
-				</a>
-
 				<h2>First half of the XX Century</h2>
-				<p>In order to create this style, we took inspiration from the newspapers that are commonly sold at the beginning of the XX century. The text was divided into columns were words were close each other, and images seemed not to have the same importance as in the previous centuries. The main aim of this historical period was the clarity, therefore the titles and the fonts were not extremely detailed and the biggest concern was related to the easy understandability of the written content.</p>
+				<p>In order to create this style, we took inspiration from the newspapers that were commonly sold at the beginning of the XX Century. The text was divided into columns where words used to be very close each other, and images seemed not to have the same importance as in the previous centuries. The main aim of this historical period was the clarity, therefore the titles and the fonts were not extremely detailed as formerly, and the biggest concern was related to the easy understandability of the written content.</p>
 				<br>
-				<a href="images/style3.png">
+				<p>The font-family that we used here is a very serious and professional one, written in italics and aimed at assisting a fast-reading style. As a matter of fact, writing the news in very narrow columns is a way to help people to read faster, given that the newspaper of this period were not read from the beginning to the end by their readers, who simply wanted to grasp a piece of information here and a piece of information there.</p>
+				<br>
 				<img src="images/style3.png" alt="style3" class="responsive"/>
-				</a>
-
 				<h2>Second half of the XX Century</h2>
-				<p>Differently than the previous decades, the magazines of the XX century were characterized by colors everywhere. We are in the post-war period. The dominating culture was the one that was led and promoted by the hippies. Everything, as a consequence, had to be very colorful and attractive. The main aim was spreading an idea of peace and harmony that was transmitted by using a huge amount of colors and putting them together, even when it appeared to go against every rule concerning the harmonious combination of colors.</p>
-				<p>Moreover, even the headers, the titles and the written content itself deserved a particular attention: the fonts that were used were usually big letters with fancy decorations in order to get people's attention. A lot of colors could be used even in the main corpus of the text. Therefore, we decided to put a colorful background and a font-family able to transmit this idea of frenzy and excitement.</p>
+				<p>Differently than the previous decades, the magazines of the XX century were characterized by the invasive presence of colors. We are in the post-war period. The dominating culture was the one that was led and promoted by the hippies. Everything, as a consequence, had to be very colorful and attractive. The main aim was spreading an idea of peace and harmony that was transmitted by using a huge amount of colors and putting them together, even when it appeared to go against every rule concerning the harmonious combination of colors.</p>
 				<br>
-				<a href="images/style4.png">
+				<p>The font that we used for the main corpus of the text looks like a joke. Some letters are in bold, others are not. There is not a common shape and a style which is followed, but we deceided to chose this kind of font because, in our opinion, it was the one which could express in the best way the carefreeness that characterized this historical period.</p>
+				<br>
+				<p>Even the headers and the titles deserved a particular attention: we used big letters with inner decorations in order to get people's attention. Additionaly, we decided to use a colorful background and a structure able to transmit this idea of frenzy and excitement.</p>
+				<br>
 				<img src="images/style4.png" alt="style4" class="responsive"/>
-				</a>
-
 				<h2></i>Late XX Century (print)</h2>
-				<p>This style is based on magazines of the end of century. This magazines presents big image and big titles on the main cover page. Titles were always coloured with bright cheerful colours.</p>
-				<p>Pages were of smooth, polished, shiny white. The font doesn't present aggressive edges, but a rounded way that makes the reader feel in an age without concerns.</p>
+				<p>This style is based on magazines belonging to the end of the XX Century. These magazines presented big images and big titles on the main cover page. The titles were always colored with bright and cheerful colours that could get people's attention.</p>
 				<br>
-				<a href="images/style5.png">
+				<p>Pages used to be of a smooth, polished, shiny white. The font doesn't present aggressive edges, but a rounded way that makes the reader feel in an age without concerns.</p>
+				<br>
 				<img src="images/style5.png" alt="style5" class="responsive"/>
 				</a>
 				<h2>2040: the future</h2>
-				<p>We imagined a future we would not like to see. We guessed that people will get bored of reading, and visual content will be the most spread way to communicate news. Therefore, we created a kind of video-reader which will read the text and display the images related to the news. In this way, people of the future will have the possibility to listen to the news while doing other things.</p>
+				<p>We imagined a future we would not like to see. We guessed that people will get bored of reading, and visual content will be the most spread way to communicate news. Therefore, we created a kind of video-reader which will read the text and display the images related to the news. In this way, people of the future will have the opportunity to listen to the news while doing other things.</p>
+				<br>
 				<p>In the future, time will be even more important than today. Consequently, in our style it will even be possible to speed up the reading voice, so as to listen to the same content in a fastest way.</p>
 				<br>
-				<a href="images/style6.png">
 				<img src="images/style6.png" alt="style5" class="responsive"/>
-				</a>
 			</section>
 		</div>
 	</body>
