--- a/index.html
+++ b/index.html
@@ -89,12 +89,13 @@
 
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-	    <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li>
-      <li><a href="docs/harpers/Harpers_Final.html" target="targetframe">Harpers</a></li>
+	       <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/bloomberg/index.html')">Bloomberg</a></li>
+<!--	    <li><a href="docs/bloomberg/index.html" target="targetframe">Bloomberg</a></li> -->
+	 <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/harpers/Harpers_Final.html')">Harpers</a></li>
       <li><a href="docs/huffington/Huffington_Final.html" target="targetframe">Huffington</a></li>
-      <li><a href="docs/thecut/thecut.html" target="targetframe">The Cut</a></li>
-      <li><a href="docs/tls/TimesLiterarySupplement_Final.html" target="targetframe">TLS</a></li>
-     <li><a href="docs/Eu_directive/eu_directive.html" target="targetframe">Eu Directive</a></li>
+<li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/thecut/thecut.html')">The Cut</a></li>
+   <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/tls/TimesLiterarySupplement_Final.html')">TLS</a></li>
+	    <li><a href="#" onclick="changeHtml('https://tttproject.github.io/docs/Eu_directive/eu_directive.html')">EU Directive</a></li>
 	    </ul>
   </div>
     </div> 
@@ -116,10 +117,12 @@
       <div id="menu">
     <ul> 
 <!--      <li><a href="https://tttproject.github.io/disclaimer/disclaimer.html" target="targetframe">Disclaimer</a></li>-->
- 	<li><a href="#" onclick="changeHtml('https://tttproject.github.io/disclaimer/disclaimer.html')">Disclaimer</a></li>    
-      <li><a href="https://tttproject.github.io/documentation/documentation.html" target="targetframe">Documentation</a></li>
-      <li><a href="https://tttproject.github.io/about/about.html" target="targetframe">About</a></li>
-      <li><a href="https://tttproject.github.io/cover/cover.html" target="targetframe">Cover</a></li>
+ 	<li><a href="#" onclick="changeHtml('https://tttproject.github.io/disclaimer/disclaimer.html')">Disclaimer</a></li>
+	<li><a href="#" onclick="changeHtml('https://tttproject.github.io/documentation/documentation.html')">Documentation</a></li>     
+  <!--    <li><a href="https://tttproject.github.io/documentation/documentation.html" target="targetframe">Documentation</a></li>-->
+ 	<li><a href="#" onclick="changeHtml('https://tttproject.github.io/about/about.html')">About</a></li>
+     <li><a href="#" onclick="changeHtml('https://tttproject.github.io/cover/cover.html')">Cover</a></li>
+
     </ul>
 </div>
 	
