--- a/index.html
+++ b/index.html
@@ -23,19 +23,16 @@
 	// in the logic of WebSite if true html is changed else if false randomCss() is called
 function checkCss(){
 	var css = document.getElementById("Iframe").contentWindow.document.getElementById("style").href;
-	if (css === "") { return false; }
-	else { return true; }
+	if (css === '') { 
+		console.log("I'm checkCSS i print false, style.href === '' "); 
+		return false; }
+	else { console.log("I'm check CSS i print true, style.href ===" + css); 
+		return true; }
 	
 }
 	 </script>
 	 
-	 
-	 <script type="text/javascript">
-	 document.addEventListener('DOMContentLoaded', function() {
-  var content = document.getElementById("Iframe");
-	console.log(content.contentWindow.document.getElementById("style").href);
-}, false);
-	 </script>
+
 	 <script type="text/javascript">
 		 
 	 function randomCss(){
